# clinical-rag-grounding

./: .env.docker.example  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  spec.md
.github/workflows/: ci.yml
.streamlit/: config.toml
scripts/: acceptance.py  eval.py  make_sample_pdf.py
src/corpus_rag/: app.py  cli.py  document_store.py  embeddings.py  logging_setup.py  prompts.py  settings.py
src/corpus_rag/adapters/: __init__.py  url.py
src/corpus_rag/eval/: __init__.py  harness.py  metrics.py  qrels.py
src/corpus_rag/pipelines/: __init__.py  indexing.py  query.py
tests/: conftest.py  test_app.py  test_dimension_contract.py  test_indexing.py  test_query.py  test_settings.py
tests/eval/: qrels.example.json  test_metrics.py
