[project]
name = "corpus-rag"
version = "0.1.0"
description = "Corpus RAG Explorer — semantic retrieval + grounded generation over a heterogeneous document corpus."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Retrieval orchestration (locked: spec §2)
    "haystack-ai>=2.8,<3.0",
    # Multi-format ingestion via Docling
    "docling>=2.15,<3.0",
    "docling-haystack>=0.2,<1.0",
    # Local embeddings
    "sentence-transformers>=3.3,<4.0",
    # Vector store: Postgres + pgvector
    "pgvector-haystack>=6.3,<7.0",
    "psycopg[binary]>=3.2,<4.0",
    # GUI
    "streamlit>=1.40,<2.0",
    # CLI + config
    "typer>=0.15,<1.0",
    "pydantic-settings>=2.7,<3.0",
]

[project.scripts]
corpus-rag = "corpus_rag.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "reportlab>=5.0.0",
    "ruff>=0.8,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corpus_rag"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: tests requiring live services (Postgres/pgvector + local LLM); skipped offline",
]
